
[tool.poetry]
name = "feature-selection-research"
version = "0.1.0"
description = "Research implementations of feature selection using metaheuristic algorithms."
authors = ["Prasad Ovhal"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
numpy = "^1.24"
pandas = "^2.0"
scikit-learn = "^1.3"
openpyxl = "^3.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
